// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuantitySelector check children type textarea /> 1`] = `
<input
  disabled={true}
  max={20}
  min={1}
  onBlur={[Function]}
  onChange={[Function]}
  type="number"
  value={1}
/>
`;

exports[`<QuantitySelector with custom children /> 1`] = `<span />`;

exports[`<QuantitySelector/> 1`] = `
<input
  disabled={false}
  max={50}
  min={1}
  name="firstName"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value={1}
/>
`;
